deploy/document-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: document-web-app-service
spec:
  type: ClusterIP
  selector:
    app: document-web-app
  ports:
    - port: 8005
      targetPort: 8005
